# cdargs

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  cdargs.spec  cdargs.spec.in  configure  configure.in  meson.build
.github/workflows/: ci.yml
contrib/: Makefile.am  Makefile.in  cdargs-bash.sh  cdargs-tcsh.csh
doc/: Makefile.am  Makefile.in  cdargs.1
m4/: Makefile.am  Makefile.in  mp_with_curses.m4
src/: Makefile.am  Makefile.in  cdargs.cc  cdargs.cpp  cdargs.h
